--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "crear-usuario-firebase",
+  "name": "crear_usuario_firebase",
   "version": "1.0.0",
-  "main": "api/crear-usuario.js",
+  "main": "index.js",
   "type": "module",
+  "scripts": {
+    "start": "node api/mercadopago.js"
+  },
   "dependencies": {
-    "firebase-admin": "^11.0.0"
+    "firebase-admin": "^11.11.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
