--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
   "name": "crear_usuario_firebase",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
-  "scripts": {
-    "start": "node api/mercadopago.js"
-  },
   "dependencies": {
-    "firebase-admin": "^11.11.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "firebase-admin": "^11.11.0"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": "18.x"
   }
 }
